kubernetes/apps/kube-system/cilium/policies/allow-glpi-agent-egress.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-glpi-agent-egress
spec:
  enableDefaultDeny:
    egress: false
    ingress: false
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: default
      app.kubernetes.io/instance: glpi
  egress:
    - toCIDR:
        - 10.25.0.0/16
      toPorts:
        - ports:
            - port: "62354"
              protocol: TCP
